--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@unocss/nuxt": "^0.49.4",
+    "@unocss/reset": "^0.49.4",
     "nuxt": "^3.1.2"
   },
   "dependencies": {
