--- a/.github/workflows/learn.yml
+++ b/.github/workflows/learn.yml
@@ -9,8 +9,8 @@ jobs:
     - name: executing remote ssh commands using password
       uses: appleboy/ssh-action@v0.1.7
       with:
-        host: ${{ evjf-app.HOST }}
-        username: ${{ evjf-app.USERNAME }}
-        password: ${{ evjf-app.PASSWORD }}
-        port: ${{ evjf-app.PORT }}
+        host: ${{ evjf.HOST }}
+        username: ${{ evjf.USERNAME }}
+        password: ${{ evjf.PASSWORD }}
+        port: ${{ evjf.PORT }}
         script: whoami
