--- a/.github/workflows/learn.yml
+++ b/.github/workflows/learn.yml
@@ -15,5 +15,5 @@ jobs:
         port: ${{ secrets.PORT }}
         script: |
           cd evjf-app
-          yarn -v
+          npm -v
           pm2 restart index
