--- a/.github/workflows/learn.yml
+++ b/.github/workflows/learn.yml
@@ -14,8 +14,9 @@ jobs:
         password: ${{ secrets.PASSWORD }}
         port: ${{ secrets.PORT }}
         script: |
+          cd evjf-app
+          git pull
           export NVM_DIR=~/.nvm
           source ~/.nvm/nvm.sh
-          cd evjf-app
           npm -v
           pm2 restart index
