--- a/.github/workflows/learn.yml
+++ b/.github/workflows/learn.yml
@@ -14,4 +14,4 @@ jobs:
         password: ${{ secrets.PASSWORD }}
         port: ${{ secrets.PORT }}
         script: |
-          ls -al
+          npm -v
