--- a/.github/workflows/learn.yml
+++ b/.github/workflows/learn.yml
@@ -14,5 +14,5 @@ jobs:
         password: ${{ secrets.PASSWORD }}
         port: ${{ secrets.PORT }}
         script: |
-          source ~/.bashrc
+          source .bashrc
           whereis npm
