--- a/.github/workflows/learn.yml
+++ b/.github/workflows/learn.yml
@@ -14,5 +14,6 @@ jobs:
         password: ${{ secrets.PASSWORD }}
         port: ${{ secrets.PORT }}
         script: |
-          source .bashrc
-          whereis npm
+          export NVM_DIR=~/.nvm
+          source ~/.nvm/nvm.sh
+          npm --help
