--- a/.github/workflows/learn.yml
+++ b/.github/workflows/learn.yml
@@ -15,6 +15,6 @@ jobs:
         port: ${{ secrets.PORT }}
         script: |
           exec bash
-          export NVM_DIR=~/.nvm
-          source ~/.nvm/nvm.sh
-          npm --help
+          npm -v
+          pm2 -v
+          yarn -v
