--- a/.github/workflows/learn.yml
+++ b/.github/workflows/learn.yml
@@ -15,6 +15,7 @@ jobs:
         port: ${{ secrets.PORT }}
         script: |
           exec bash
-          npm -v
-          pm2 -v
-          yarn -v
+          cd evjf-app
+          yarn install
+          yarn build
+          pm2 restart index
