--- a/.github/workflows/learn.yml
+++ b/.github/workflows/learn.yml
@@ -14,7 +14,7 @@ jobs:
         password: ${{ secrets.PASSWORD }}
         port: ${{ secrets.PORT }}
         script: |
-          exec bash
+          bash
           cd evjf-app
           yarn install
           yarn build
