--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,11 +13,12 @@ jobs:
         username: ${{ secrets.USERNAME }}
         password: ${{ secrets.PASSWORD }}
         port: ${{ secrets.PORT }}
+        debug: true
         script: |
-            exec bash
-            cd evjf-app
-            git pull origin main
-            yarn install
-            yarn build
-            pm2 stop .output/server/index.mjs
-            pm2 start .output/server/index.mjs
+          exec bash
+          cd evjf-app
+          git pull origin main
+          yarn install
+          yarn build
+          pm2 stop .output/server/index.mjs
+          pm2 start .output/server/index.mjs
