--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ jobs:
 
   build:
     name: Build
-    runs-on: debian-latest
+    runs-on: ubuntu-latest
         
     steps:
     - name: executing remote ssh commands using password
